# reef_msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
include/reef_msgs/: AngleRepresentationInterface.h  AxisAngle.h  DCM.h  EulerAngle.h  Quaternion.h  ReefMsgsConversionAPI.h  ReefObjectConversion.h  ReefQuat.h  RodriguezParameter.h  RotationMatrix.h  dynamics.h  matrix_operation.h
msg/: DeltaToVel.msg  DesiredState.msg  DesiredVector.msg  DetectedPlanes.msg  EulerAngles.msg  LimCommPoseEstimate.msg  ListPointList.msg  MagSensorAndCorrected.msg  Moment.msg  Pixel.msg  PlaneInfo.msg  PointList.msg  RGB.msg  Set.msg  SyncEstimateError.msg  SyncVerifyEstimates.msg  Vector.msg  XYDebugEstimate.msg  XYEstimate.msg  XYZDebugEstimate.msg  XYZEstimate.msg  ZDebugEstimate.msg  ZEstimate.msg
src/: AngleRepresentationInterface.cpp  AxisAngle.cpp  DCM.cpp  EulerAngle.cpp  OdomNWU2PoseStampedNEDNode.cpp  Quaternion.cpp  ReefMsgsConversionAPI.cpp  ReefQuat.cpp  RodriguezParameter.cpp  RotationMatrix.cpp  dynamics.cpp  matrix_operation.cpp
srv/: GpsPosition.srv
test/: CMakeLists.txt  DCM_test.cpp  axis_angle_test.cpp  conversion_test.cpp  dynamics_test.cpp  euler_angle_test.cpp  quat_test.cpp  rodriguez_parameter_test.cpp
test/data_test/: test_DCM.json  test_axisangle.json  test_euler.json  test_quaternion.json  test_rodriguez.json
test/include/: test_utilities.h
